Revert "Phase A: switch Drive contract to currentMileage and add derived drivenDistance queries"