@@ -7,15 +7,13 @@ import de.digidrivelog.models.Car;
 import de.digidrivelog.models.Drive;
 import de.digidrivelog.models.User;
 import de.digidrivelog.repositories.CarRepository;
-import de.digidrivelog.repositories.DriveDistanceProjection;
 import de.digidrivelog.repositories.DriveRepository;
 import de.digidrivelog.repositories.UserRepository;
 import de.digidrivelog.mappers.DriveMapper;
 import org.springframework.http.HttpStatus;
 import org.springframework.web.server.ResponseStatusException;
-import java.util.List;
-import java.util.Map;
 import java.util.stream.Collectors;
+import java.util.List;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
@@ -32,12 +30,12 @@ public class DriveService {
         User driver = userRepository.findById(request.getDriverId()).orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Driver user not found"));
         Drive d = DriveMapper.fromCreate(request, car, driver);
         Drive saved = driveRepository.save(d);
-        return toDtoWithDrivenDistance(saved);
+        return DriveMapper.toDto(saved);
     }
 
     public DriveDto getDriveById(Long id) {
         Drive d = driveRepository.findById(id).orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Drive not found"));
-        return toDtoWithDrivenDistance(d);
+        return DriveMapper.toDto(d);
     }
 
     public DriveDto updateDrive(Long id, UpdateDriveRequest request) {
@@ -46,7 +44,7 @@ public class DriveService {
         User driver = userRepository.findById(request.getDriverId()).orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Driver user not found"));
         DriveMapper.applyUpdate(request, existing, car, driver);
         Drive saved = driveRepository.save(existing);
-        return toDtoWithDrivenDistance(saved);
+        return DriveMapper.toDto(saved);
     }
 
     public void deleteDrive(Long id) {
@@ -57,46 +55,15 @@ public class DriveService {
     }
 
     public List<DriveDto> getAllDrivesByVehicle(Long carId) {
-        List<Drive> drives = driveRepository.findByCarCarId(carId);
-        Map<Long, Integer> drivenDistanceByDriveId = findDrivenDistanceByCar(carId);
-        return drives.stream()
-                .map(drive -> DriveMapper.toDto(drive, drivenDistanceByDriveId.get(drive.getDriveId())))
-                .toList();
+        return driveRepository.findByCarCarId(carId).stream().map(DriveMapper::toDto).collect(Collectors.toList());
     }
 
     public List<DriveDto> getAllDrivesByUser(Long userId) {
-        List<Drive> drives = driveRepository.findByDriverUserId(userId);
-        Map<Long, Integer> drivenDistanceByDriveId = findDrivenDistanceByUser(userId);
-        return drives.stream()
-                .map(drive -> DriveMapper.toDto(drive, drivenDistanceByDriveId.get(drive.getDriveId())))
-                .toList();
+        return driveRepository.findByDriverUserId(userId).stream().map(DriveMapper::toDto).collect(Collectors.toList());
     }
 
     public List<DriveDto> getAllDrivesByVehicleAndUser(Long carId, Long userId) {
-        List<Drive> drives = driveRepository.findByCarCarIdAndDriverUserId(carId, userId);
-        Map<Long, Integer> drivenDistanceByDriveId = findDrivenDistanceByCar(carId);
-        return drives.stream()
-                .map(drive -> DriveMapper.toDto(drive, drivenDistanceByDriveId.get(drive.getDriveId())))
-                .toList();
-    }
-
-    private DriveDto toDtoWithDrivenDistance(Drive drive) {
-        DriveDistanceProjection distanceProjection = driveRepository.findDrivenDistanceByDriveId(drive.getDriveId());
-        Integer drivenDistance = distanceProjection != null ? distanceProjection.getDrivenDistance() : null;
-        return DriveMapper.toDto(drive, drivenDistance);
-    }
-
-    private Map<Long, Integer> findDrivenDistanceByUser(Long userId) {
-        return toDriveDistanceMap(driveRepository.findDrivenDistanceByUserId(userId));
-    }
-
-    private Map<Long, Integer> findDrivenDistanceByCar(Long carId) {
-        return toDriveDistanceMap(driveRepository.findDrivenDistanceByCarId(carId));
-    }
-
-    private Map<Long, Integer> toDriveDistanceMap(List<DriveDistanceProjection> projections) {
-        return projections.stream()
-                .collect(Collectors.toMap(DriveDistanceProjection::getDriveId, DriveDistanceProjection::getDrivenDistance));
+        return driveRepository.findByCarCarIdAndDriverUserId(carId, userId).stream().map(DriveMapper::toDto).collect(Collectors.toList());
     }
 
 }
